# lu-bachelor-thesis

./: .gitignore  BENCHMARKING.md  Makefile  README.md  pixi.toml  pyproject.toml
benchmarks/common/cpp/: mem_track.hpp
benchmarks/data/prepared/: kmp_pattern.txt  kmp_text.txt  seq_pair_a.txt  seq_pair_b.txt  tree_100.nwk  tree_1000.nwk  tree_10000.nwk  tree_100000.nwk
benchmarks/kmp/cpp/: CMakeLists.txt  bench.cpp  kmp.cpp  mem.cpp
benchmarks/kmp/rust/: Cargo.toml
benchmarks/kmp/rust/benches/: bench.rs
benchmarks/kmp/rust/examples/: mem.rs
benchmarks/kmp/rust/src/: lib.rs
benchmarks/needleman_wunsch/r/: DESCRIPTION  bench.R  nw.R
benchmarks/needleman_wunsch/rust/: Cargo.toml
benchmarks/needleman_wunsch/rust/benches/: bench.rs
benchmarks/needleman_wunsch/rust/examples/: mem.rs
benchmarks/needleman_wunsch/rust/src/: lib.rs
benchmarks/smith_waterman/cpp/: CMakeLists.txt  bench.cpp  mem.cpp  sw.cpp
benchmarks/smith_waterman/rust/: Cargo.toml
benchmarks/smith_waterman/rust/benches/: bench.rs
benchmarks/smith_waterman/rust/examples/: mem.rs
benchmarks/smith_waterman/rust/src/: lib.rs
benchmarks/tree_traversal/cpp/: CMakeLists.txt  bench.cpp  mem.cpp  traversal.cpp
benchmarks/tree_traversal/r/: DESCRIPTION  bench.R  traversal.R
benchmarks/tree_traversal/rust/: Cargo.toml
benchmarks/tree_traversal/rust/benches/: bench.rs
benchmarks/tree_traversal/rust/examples/: mem.rs
benchmarks/tree_traversal/rust/src/: lib.rs
orchestrator/: parsers.py  run_benchmarks.py
scripts/: 0_prepare_data.py  2.1_pipeline_overview.py  2.3_measurement_methodology.py  3_result_graphs_tables.py
